--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,27 +9,25 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@react-three/drei": "^10.5.0",
-    "@react-three/fiber": "^9.2.0",
-    "@types/three": "^0.178.1",
-    "axios": "^1.10.0",
-    "framer-motion": "^12.23.3",
-    "lucide-react": "^0.525.0",
-    "next": "15.3.5",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "three": "^0.178.0",
-    "zustand": "^5.0.6"
-  },
-  "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
-    "@types/node": "^20.19.7",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "15.3.5",
-    "tailwindcss": "^4",
-    "typescript": "^5"
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "next": "14.0.0",
+    "typescript": "^5",
+    "@types/node": "^20",
+    "@types/react": "18.2.0",
+    "@types/react-dom": "18.2.0",
+    "three": "0.158.0",
+    "@types/three": "0.158.0",
+    "@react-three/fiber": "8.15.0",
+    "@react-three/drei": "9.88.0",
+    "framer-motion": "^10.16.0",
+    "zustand": "^4.4.0",
+    "lucide-react": "^0.292.0",
+    "axios": "^1.6.0",
+    "tailwindcss": "^3.3.0",
+    "autoprefixer": "^10.0.1",
+    "postcss": "^8",
+    "eslint": "^8",
+    "eslint-config-next": "14.0.0"
   }
 }
