--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@react-three/fiber": "^8.15.11",
     "@react-three/postprocessing": "^3.0.4",
     "@tailwindcss/postcss": "^4.1.11",
+    "axios": "^1.10.0",
     "framer-motion": "^10.16.4",
     "lucide-react": "^0.263.1",
     "next": "14.2.30",
