--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,17 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@react-three/drei": "^9.88.13",
+    "@headlessui/react": "^2.2.4",
+    "@heroicons/react": "^2.2.0",
+    "@react-spring/three": "~9.7.5",
+    "@react-three/drei": "^9.77.3",
     "@react-three/fiber": "^8.15.11",
-    "@react-three/postprocessing": "^3.0.4",
-    "@tailwindcss/postcss": "^4.1.11",
+    "@react-three/postprocessing": "^2.16.2",
     "axios": "^1.10.0",
-    "framer-motion": "^10.16.4",
-    "lucide-react": "^0.263.1",
+    "framer-motion": "^11.5.0",
+    "immer": "^10.1.1",
+    "lucide-react": "^0.437.0",
     "next": "14.2.30",
     "react": "^18",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18",
-    "three": "^0.160.0"
+    "tailwind-merge": "^2.5.2",
+    "tailwindcss-animate": "^1.0.7",
+    "three": "0.155.0",
+    "three-mesh-bvh": "^0.6.8",
+    "zustand": "^5.0.6"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -32,5 +41,9 @@
     "postcss": "^8.4.35",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
+  },
+  "overrides": {
+    "three": "0.155.0",
+    "three-mesh-bvh": "^0.6.8"
   }
 }
